# coders-attacking

./: .gitmodules  CMakeLists.txt  dependencies.cmake  project_options.cmake  vcpkg.json
src/: CMakeLists.txt
src/coders_attacking/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  scene.hpp  scene_manager.hpp  scene_manager_proxy.cpp  scene_manager_proxy.hpp  scene_stack.cpp  scene_stack.hpp
src/coders_attacking/scenes/: fleet_size_selection.cpp  fleet_size_selection.hpp  test_scene.cpp  test_scene.hpp
src/common/: CMakeLists.txt  resource_manager.cpp
src/common/include/common/: font_type.hpp  resource_manager.hpp  service_provider.hpp
src/game/: CMakeLists.txt  galaxy.cpp  uuid.cpp
src/game/include/game/: component.hpp  components.hpp  galaxy.hpp  game_object.hpp  planet.hpp  transform.hpp  uuid.hpp
src/gfx/: CMakeLists.txt  font.cpp  render_context.cpp  renderer.cpp  window.cpp
src/gfx/include/gfx/: font.hpp  render_context.hpp  renderer.hpp  window.hpp
src/ui/: CMakeLists.txt  button.cpp  event_system.cpp  focus_manager.cpp  input_field.cpp  label.cpp  panel.cpp  widget.cpp
src/ui/include/ui/: alignment.hpp  bumper.hpp  button.hpp  column_layout.hpp  event.hpp  event_system.hpp  focus_manager.hpp  grid_layout.hpp  ingame_view.hpp  input_field.hpp  key.hpp  label.hpp  layout.hpp  mouse_button.hpp  panel.hpp  widget.hpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: color.hpp  concepts.hpp  lexical_cast.hpp  math.hpp  rect.hpp  vec2.hpp
src/view/: CMakeLists.txt  camera.cpp  renderer.cpp  view.cpp  window.cpp
src/view/include/view/: background_star.hpp  camera.hpp  renderer.hpp  view.hpp  window.hpp
test/: CMakeLists.txt
