add_executable(coders_attacking
        scenes/test_scene.hpp
        main.cpp
        scene.hpp
        scene_manager.hpp
        scene_stack.cpp
        scene_stack.hpp
        scenes/test_scene.cpp
        application.hpp
        application.cpp
        scene_manager_proxy.cpp
        scene_manager_proxy.hpp
        scenes/fleet_size_selection.cpp
        scenes/fleet_size_selection.hpp
)

target_link_libraries(coders_attacking
        PRIVATE
        game
        gfx
        ui
        utils
        common
)

target_link_system_libraries(coders_attacking
        PRIVATE
        spdlog::spdlog
)
